--- a/product-service/package.json
+++ b/product-service/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@aws-cdk/aws-apigatewayv2-alpha": "^2.82.0-alpha.0",
     "@aws-cdk/aws-apigatewayv2-integrations-alpha": "^2.82.0-alpha.0",
+    "@types/aws-lambda": "^8.10.115",
     "@types/node": "^20.2.5",
     "aws-cdk-lib": "^2.82.0",
     "esbuild": "^0.17.19",
