--- a/product-service/package.json
+++ b/product-service/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "prettier:fix": "npx prettier --write .",
     "cdk:bootstrap": "cdk bootstrap",
     "cdk:deploy": "cdk deploy"
@@ -15,9 +15,13 @@
     "@aws-cdk/aws-apigatewayv2-alpha": "^2.82.0-alpha.0",
     "@aws-cdk/aws-apigatewayv2-integrations-alpha": "^2.82.0-alpha.0",
     "@types/aws-lambda": "^8.10.115",
+    "@types/jest": "^29.5.2",
     "@types/node": "^20.2.5",
     "aws-cdk-lib": "^2.82.0",
     "esbuild": "^0.17.19",
-    "prettier": "2.8.8"
+    "jest": "^29.5.0",
+    "prettier": "2.8.8",
+    "ts-jest": "^29.1.0",
+    "typescript": "^5.1.3"
   }
 }
