--- a/product-service/tsconfig.cdk.json
+++ b/product-service/tsconfig.cdk.json
@@ -1,6 +1,8 @@
 {
   "compilerOptions": {
     "module": "CommonJS",
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "esModuleInterop": true
   }
 }
