--- a/product-service/package.json
+++ b/product-service/package.json
@@ -7,7 +7,8 @@
     "test": "jest",
     "prettier:fix": "npx prettier --write .",
     "cdk:bootstrap": "cdk bootstrap",
-    "cdk:deploy": "cdk deploy"
+    "cdk:deploy": "cdk deploy",
+    "addInitialDataToDB": "npx ts-node --project=tsconfig.cdk.json scripts/addInitialDataToDB.ts"
   },
   "author": "",
   "license": "ISC",
@@ -17,11 +18,16 @@
     "@types/aws-lambda": "^8.10.115",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.2.5",
+    "@types/uuid": "^9.0.2",
     "aws-cdk-lib": "^2.82.0",
+    "aws-sdk": "^2.1395.0",
     "esbuild": "^0.17.19",
     "jest": "^29.5.0",
     "prettier": "2.8.8",
     "ts-jest": "^29.1.0",
     "typescript": "^5.1.3"
+  },
+  "dependencies": {
+    "uuid": "^9.0.0"
   }
 }
