--- a/import-service/package.json
+++ b/import-service/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "test": "jest",
     "cdk:bootstrap": "cdk bootstrap",
     "cdk:deploy": "cdk deploy"
   },
@@ -19,6 +20,7 @@
     "esbuild": "^0.18.4"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.2",
     "aws-sdk": "^2.1399.0",
     "jest": "^29.5.0",
     "ts-jest": "^29.1.0",
