--- a/import-service/package.json
+++ b/import-service/package.json
@@ -13,10 +13,12 @@
   "dependencies": {
     "@aws-cdk/aws-apigatewayv2-alpha": "^2.84.0-alpha.0",
     "@aws-cdk/aws-apigatewayv2-integrations-alpha": "^2.84.0-alpha.0",
+    "@aws-sdk/client-sqs": "^3.359.0",
     "@types/aws-lambda": "^8.10.119",
     "@types/node": "^20.3.1",
     "aws-cdk-lib": "^2.84.0",
     "csv-parser": "^3.0.0",
+    "dotenv": "^16.3.1",
     "esbuild": "^0.18.4"
   },
   "devDependencies": {
