--- a/product-service/package.json
+++ b/product-service/package.json
@@ -26,6 +26,8 @@
     "typescript": "^5.1.3"
   },
   "dependencies": {
+    "@aws-sdk/client-sns": "^3.359.0",
+    "dotenv": "^16.3.1",
     "uuid": "^9.0.0"
   }
 }
